--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "homepage": "http://etcoding.com/page/RightClickMenu-jQuery-plugin.aspx",
     "maintainers": [
         {
-            "name": "Evgeni Tarovski",
+            "name": "Evgeni Tsarovski",
             "url": "http://www.etcoding.com"
         }
     ],
